<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefs_cat_screen">
        <CheckBoxPreference
            android:defaultValue="@string/prefs_prevent_screen_lock_default"
            android:dialogTitle="@string/prefs_prevent_screen_lock_title"
            android:key="@string/prefs_prevent_screen_lock_key"
            android:summaryOff="@string/prefs_prevent_screen_lock_summary_off"
            android:summaryOn="@string/prefs_prevent_screen_lock_summary_on"
            android:title="@string/prefs_prevent_screen_lock" />

        <CheckBoxPreference
            android:defaultValue="@string/prefs_enable_ads_default"
            android:dialogTitle="@string/prefs_enable_ads_title"
            android:key="@string/prefs_enable_ads_key"
            android:summaryOff="@string/prefs_enable_ads_summary_off"
            android:summaryOn="@string/prefs_enable_ads_summary_on"
            android:title="@string/prefs_enable_ads" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/prefs_cat_recording_key"
        android:title="@string/prefs_cat_recording">

        <CheckBoxPreference
            android:defaultValue="@string/prefs_live_mode_default"
            android:dialogTitle="@string/prefs_live_mode_title"
            android:key="@string/prefs_live_mode_key"
            android:summaryOff="@string/prefs_live_mode_summary_off"
            android:summaryOn="@string/prefs_live_mode_summary_on"
            android:title="@string/prefs_live_mode" />

        <ListPreference
            android:defaultValue="@string/prefs_sample_rate_default"
            android:dialogTitle="@string/prefs_sample_rate_title"
            android:entries="@array/prefs_sample_rate_entries"
            android:entryValues="@array/prefs_sample_rate_values"
            android:key="@string/prefs_sample_rate_key"
            android:summary="@string/prefs_sample_rate_summary"
            android:title="@string/prefs_sample_rate" />

        <ListPreference
            android:defaultValue="@string/prefs_buffer_size_adjuster_default"
            android:dialogTitle="@string/prefs_buffer_size_adjuster_title"
            android:entries="@array/prefs_buffer_size_adjuster_entries"
            android:entryValues="@array/prefs_buffer_size_adjuster_values"
            android:key="@string/prefs_buffer_size_adjuster_key"
            android:summary="@string/prefs_buffer_size_adjuster_summary"
            android:title="@string/prefs_buffer_size_adjuster" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_cat_key">

        <ListPreference
            android:defaultValue="@string/prefs_key_default"
            android:dialogTitle="@string/prefs_key_title"
            android:entries="@array/prefs_key_entries"
            android:entryValues="@array/prefs_key_values"
            android:key="@string/prefs_key_key"
            android:summary="@string/prefs_key_summary"
            android:title="@string/prefs_key" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_cat_pitch">

        <ListPreference
            android:defaultValue="@string/prefs_pitch_pull_default"
            android:dialogTitle="@string/prefs_pitch_pull_title"
            android:entries="@array/prefs_pitch_pull_entries"
            android:entryValues="@array/prefs_pitch_pull_values"
            android:key="@string/prefs_pitch_pull_key"
            android:summary="@string/prefs_pitch_pull_summary"
            android:title="@string/prefs_pitch_pull" />

        <ListPreference
            android:defaultValue="@string/prefs_pitch_shift_default"
            android:dialogTitle="@string/prefs_pitch_shift_title"
            android:entries="@array/prefs_pitch_shift_entries"
            android:entryValues="@array/prefs_pitch_shift_values"
            android:key="@string/prefs_pitch_shift_key"
            android:summary="@string/prefs_pitch_shift_summary"
            android:title="@string/prefs_pitch_shift" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_cat_correction">

        <ListPreference
            android:defaultValue="@string/prefs_corr_str_default"
            android:dialogTitle="@string/prefs_corr_str_title"
            android:entries="@array/prefs_corr_str_entries"
            android:entryValues="@array/prefs_corr_str_values"
            android:key="@string/prefs_corr_str_key"
            android:summary="@string/prefs_corr_str_summary"
            android:title="@string/prefs_corr_str" />

        <ListPreference
            android:defaultValue="@string/prefs_corr_smooth_default"
            android:dialogTitle="@string/prefs_corr_smooth_title"
            android:entries="@array/prefs_corr_smooth_entries"
            android:entryValues="@array/prefs_corr_smooth_values"
            android:key="@string/prefs_corr_smooth_key"
            android:summary="@string/prefs_corr_smooth_summary"
            android:title="@string/prefs_corr_smooth" />

        <CheckBoxPreference
            android:defaultValue="@string/prefs_formant_corr_default"
            android:dialogTitle="@string/prefs_formant_corr_title"
            android:key="@string/prefs_formant_corr_key"
            android:summaryOff="@string/prefs_formant_corr_summary_off"
            android:summaryOn="@string/prefs_formant_corr_summary_on"
            android:title="@string/prefs_formant_corr" />

        <ListPreference
            android:defaultValue="@string/prefs_formant_warp_default"
            android:dependency="@string/prefs_formant_corr_key"
            android:dialogTitle="@string/prefs_formant_warp_title"
            android:entries="@array/prefs_formant_warp_entries"
            android:entryValues="@array/prefs_formant_warp_values"
            android:key="@string/prefs_formant_warp_key"
            android:summary="@string/prefs_formant_warp_summary"
            android:title="@string/prefs_formant_warp" />

        <ListPreference
            android:defaultValue="@string/prefs_corr_mix_default"
            android:dialogTitle="@string/prefs_corr_mix_title"
            android:entries="@array/prefs_corr_mix_entries"
            android:entryValues="@array/prefs_corr_mix_values"
            android:key="@string/prefs_corr_mix_key"
            android:summary="@string/prefs_corr_mix_summary"
            android:title="@string/prefs_corr_mix" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_cat_reset_default">
        <Preference
            android:defaultValue="@string/prefs_reset_default_default"
            android:dialogTitle="@string/prefs_reset_default_title"
            android:key="@string/prefs_reset_default_key"
            android:summary="@string/prefs_reset_default_summary"
            android:title="@string/prefs_reset_default" />

    </PreferenceCategory>

</PreferenceScreen>