<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/startup_dialog_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/startup_dialog_title" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/startup_dialog_text"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:scrollbars="vertical"
        android:text="@string/startup_dialog_text" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/startup_dialog_accept_btn"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/startup_dialog_accept_btn" />
</LinearLayout>